--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         
         <div>
-            <input class="input"type="search" id="locator" name="locator" placeholder="Enter object you are trying to indetify"/>
+            <input class="input"type="search" id="locator" name="locator" placeholder="Enter object you are trying to identify"/>
             <br>
             <div id="search_results"></div>
         </div>
